Michael Feathers initial draft - cleaning up social media.  Major issue with episode show notes crashing but pushing up changes anyway.

--- a/config.toml
+++ b/config.toml
@@ -23,20 +23,9 @@ disqusShortname = "advtechpodcast"
     url = "/about"
 
 [[Menu.Main]]
-    name = "Contact"
-    identifier = "contact"
-    url = "/contact"
-
-[[Menu.Main]]
     name = "Resources"
     identifier = "resources"
     url = "#!"
-
-[[Menu.Main]]
-    name = "Books"
-    identifier = "books"
-    url = "/books"
-    parent = "resources"
 
 [params]
 site_theme = "blue"
@@ -55,22 +44,16 @@ media_prefix = "https://media.blubrry.com/arresteddevops/content.blubrry.com/arr
     itunes_author = "Alexandra Moxin" #no markdown or HTML
     itunes_summary = "The Advance Tech Podcast brings you advanced technology and open source news you won’t hear in the mainstream media. Hosted by Alexandra Moxin and Adam Dymitruk. We promote technical and industry expertise, give you unparalleled access to industry experts and we believe in and promote gender parity in tech. We aim to give you the unbiased truth in advanced technology and show where its going. In our weekly format we’ll review notable tech and startup news, provide tutorials and interview a special guest." # Limited to 4000 characters or less, plain text, no HTML
     itunes_owner_name = "Alexandra Moxin"
-    itunes_owner_email = "matt.stratton@gmail.com" #contains the e-mail address that will be used to contact the owner of the Podcast for communication specifically about their Podcast on iTunes. It will not be publicly displayed on iTunes.
+    itunes_owner_email = "alexandra.moxin@adaptechsolutions.ca" #contains the e-mail address that will be used to contact the owner of the Podcast for communication specifically about their Podcast on iTunes. It will not be publicly displayed on iTunes.
     itunes_image = "https://www.arresteddevops.com/img/ado-podcast-logo.png" #fqdn to the image art for your podcast
     itunes_top_category = "Technology"
     itunes_first_sub_category = "Software Tutorials"
     itunes_second_sub_category = "Technology and Open Source News"
 
   [params.social]
-    github = "arresteddevops"
-    facebook = "Arresteddevops"
-    facebook_admin = "500557137"  # This needs to be a page admin to get domain insights
-    twitter = "arresteddevops"
-    twitter_domain = "arresteddevops.com" # This domain shows in twitter cards as "View on `twitter_domain`"
-    googleplus = "ArrestedDevOps"
-    instagram = "nozzleio"
-    youtube = "arresteddevops"
-    linkedin = "mattstratton"
+    github = "AdvanceTechMedia"
+    twitter = "AdvTechPodcast"
+    linkedin = "/alexandra-moxin"
 
   [params.authors]
     [params.authors.Matt]
