--- a/config.toml
+++ b/config.toml
@@ -31,13 +31,13 @@ disqusShortname = "advtechpodcast"
 site_theme = "blue"
 # about_logo = "/img/hugocast.png"
 copyright_notice = "Copyright 2017 [Advance Tech Media](https://www.advancetechmedia.org)"
-itunes_subscribe = "http://itunes.apple.com/us/podcast/arrested-devops/id773888088?mt=2&uo=4&at=11lsCi"
-android_subscribe = "http://subscribeonandroid.com/feeds.podtrac.com/VGAulpN7MY1U"
-google_play_subscribe = "https://goo.gl/app/playmusic?ibi=com.google.PlayMusic&isi=691797987&ius=googleplaymusic&link=https://play.google.com/music/m/Ihj4yege3lfmp3vs5yoopgxijpi?t%3DArrested_DevOps"
-mailchimp_subscribe = "//arresteddevops.us3.list-manage.com/subscribe/post?u=5e4cbcac996bb9df25f970a89&amp;id=154fa76bcc"
+itunes_subscribe = ""
+android_subscribe = ""
+google_play_subscribe = ""
+mailchimp_subscribe = ""
 #rss_subscribe = "http://feed.com/myfeed" #only set this if you don't want to use the built-in feed
-description = "The HugoCast is the best podcast you've ever seen. You will learn everything you ever needed to know about [podcasting](https://en.wikipedia.org/wiki/Podcast) from the most inspiring experts to ever show up on the whole internet."
-media_prefix = "https://media.blubrry.com/arresteddevops/content.blubrry.com/arresteddevops/"
+description = "The Advance Tech Podcast brings you advanced technology and open source news you won’t hear in the mainstream media. Hosted by Alexandra Moxin and Adam Dymitruk. We promote technical and industry expertise, give you unparalleled access to industry experts and we believe in and promote gender parity in tech. We aim to give you the unbiased truth in advanced technology and show where its going. In our weekly format we’ll review notable tech and startup news, provide tutorials and interview a special guest."
+media_prefix = ""
   [params.feed]
     feed_copyright = "Copyright 2017 Advance Tech Media" #do not use markdown in this field; it is used in the feed
     itunes_subtitle = "Bringing you the latest in technology and open source news!" #no markdown or HTML
@@ -45,7 +45,7 @@ media_prefix = "https://media.blubrry.com/arresteddevops/content.blubrry.com/arr
     itunes_summary = "The Advance Tech Podcast brings you advanced technology and open source news you won’t hear in the mainstream media. Hosted by Alexandra Moxin and Adam Dymitruk. We promote technical and industry expertise, give you unparalleled access to industry experts and we believe in and promote gender parity in tech. We aim to give you the unbiased truth in advanced technology and show where its going. In our weekly format we’ll review notable tech and startup news, provide tutorials and interview a special guest." # Limited to 4000 characters or less, plain text, no HTML
     itunes_owner_name = "Alexandra Moxin"
     itunes_owner_email = "alexandra.moxin@adaptechsolutions.ca" #contains the e-mail address that will be used to contact the owner of the Podcast for communication specifically about their Podcast on iTunes. It will not be publicly displayed on iTunes.
-    itunes_image = "https://www.arresteddevops.com/img/ado-podcast-logo.png" #fqdn to the image art for your podcast
+    itunes_image = "" #fqdn to the image art for your podcast
     itunes_top_category = "Technology"
     itunes_first_sub_category = "Software Tutorials"
     itunes_second_sub_category = "Technology and Open Source News"
@@ -56,19 +56,19 @@ media_prefix = "https://media.blubrry.com/arresteddevops/content.blubrry.com/arr
     linkedin = "/alexandra-moxin"
 
   [params.authors]
-    [params.authors.Matt]
-      name	= "Matt Stratton"
-      thumbnail = "https://www.arresteddevops.com/img/matt.png"
-      bio = "Matt Stratton is a solutions architect at Chef, where he demonstrates how Chef’s automation platform provides speed and flexibility to clients’ infrastructure. He is devoted to concepts like Continuous Delivery and Infrastructure as Code, and his license plate actually says “DevOps”. He lives in Chicago and has an unhealthy obsession with Doctor Who, Firefly, and Game of Thrones. And whiskey."
-      [params.authors.Matt.social]
-        github = "mattstratton"
-        facebook = "matt.stratton"
-        twitter = "mattstratton"
-        linkedin = "mattstratton"
-        homepage = "https://www.mattstratton.io"
-    [params.authors.Trevor]
-			name = "Trevor Hess"
-			thumbnail = "https://www.arresteddevops.com/img/trevor.png"
+    [params.authors.Alexandra]
+      name	= "Alexandra Moxin"
+      thumbnail = ""
+      bio = ""
+      [params.authors.Alexandra.social]
+        github = ""
+        facebook = ""
+        twitter = "Alexandra933"
+        linkedin = "/Alexandra-Moxin"
+        homepage = ""
+    [params.authors.Adam]
+			name = "Adam Dymitruk"
+			thumbnail = ""
 			bio = ""
-				[params.authors.Trevor.social]
-					twitter = "trevorghess"
+				[params.authors.Adam.social]
+					twitter = "adymitruk"
