--- a/config.toml
+++ b/config.toml
@@ -36,7 +36,7 @@ android_subscribe = ""
 google_play_subscribe = ""
 mailchimp_subscribe = ""
 #rss_subscribe = "http://feed.com/myfeed" #only set this if you don't want to use the built-in feed
-description = "The Advance Tech Podcast brings you advanced technology and open source news you won’t hear in the mainstream media. Hosted by Alexandra Moxin and Adam Dymitruk. We promote technical and industry expertise, give you unparalleled access to industry experts and we believe in and promote gender parity in tech. We aim to give you the unbiased truth in advanced technology and show where its going. In our weekly format we’ll review notable tech and startup news, provide tutorials and interview a special guest."
+description = "The Advance Tech Podcast brings you news you won’t hear in the mainstream media. Hosted by Alexandra Moxin and Adam Dymitruk. In our weekly format we’ll review notable tech news, provide tutorials and interview a special guest that is defining the technology of tomorrow. Sponsored by: Adaptech Solutions. Building software that defies convention. Get your startup off on the right foot for the future and avoid the dreaded MVP rewrite, get out of your legacy code trap, and get trained in modern software architecture practices. "
 media_prefix = ""
   [params.feed]
     feed_copyright = "Copyright 2017 Advance Tech Media" #do not use markdown in this field; it is used in the feed
