--- a/data/guests/mfeathers.yml
+++ b/data/guests/mfeathers.yml
@@ -1,4 +1,4 @@
-name: sbellware
-full_name: "Scott Bellware"
-thumbnail: "/img/guest/sbellware.jpg"
-bio: "Scott Bellware works with development teams on monolith and Rails remediation, and autonomous services projects. He’s been on a five-year mission to incorporate all the good things he’s learned in the distributed systems world with all the good things he’s learned in the Ruby world. He’s been coding professionally for twenty-five years, held every position in a software organization from QA to CTO, and worked in a variety of languages, frameworks, and platforms. Scott is a contributor to the Eventide toolkit for event-sourced autonomous services in Ruby."
+name: mfeathers
+full_name: "Michael Feathers"
+thumbnail: "/img/guest/.jpg"
+bio: "Michael's bio"
