--- a/config.toml
+++ b/config.toml
@@ -42,13 +42,14 @@ media_prefix = ""
     feed_copyright = "Copyright 2017 Advance Tech Media" #do not use markdown in this field; it is used in the feed
     itunes_subtitle = "Bringing you the latest in technology and open source news!" #no markdown or HTML
     itunes_author = "Alexandra Moxin" #no markdown or HTML
-    itunes_summary = "The Advance Tech Podcast brings you advanced technology and open source news you won’t hear in the mainstream media. Hosted by Alexandra Moxin and Adam Dymitruk. We promote technical and industry expertise, give you unparalleled access to industry experts and we believe in and promote gender parity in tech. We aim to give you the unbiased truth in advanced technology and show where its going. In our weekly format we’ll review notable tech and startup news, provide tutorials and interview a special guest." # Limited to 4000 characters or less, plain text, no HTML
-    itunes_owner_name = "Alexandra Moxin"
-    itunes_owner_email = "alexandra.moxin@adaptechsolutions.ca" #contains the e-mail address that will be used to contact the owner of the Podcast for communication specifically about their Podcast on iTunes. It will not be publicly displayed on iTunes.
+    itunes_summary = "The Advance Tech Podcast brings you advanced technology and open source news you won’t hear in the mainstream media. Hosted by Alexandra Moxin and Adam Dymitruk. We promote technical and industry expertise, give you unparalleled access to industry experts. We aim to give you the unbiased truth in advanced technology and show where its going. In our weekly format we’ll review notable tech and startup news, provide tutorials and interview a special guest who is defining the technology of tomorrow." # Limited to 4000 characters or less, plain text, no HTML
+    itunes_owner_name = "Advance Tech Media"
+    itunes_owner_email = "alexandra.moxin@advancetechmedia.ca" #contains the e-mail address that will be used to contact the owner of the Podcast for communication specifically about their Podcast on iTunes. It will not be publicly displayed on iTunes.
     itunes_image = "" #fqdn to the image art for your podcast
     itunes_top_category = "Technology"
-    itunes_first_sub_category = "Software Tutorials"
-    itunes_second_sub_category = "Technology and Open Source News"
+    itunes_first_sub_category = "Tech News"
+    itunes_second_sub_category = "Software How-To"
+    itunes_third_sub_category = "Podcasting"
 
   [params.social]
     github = "AdvanceTechMedia"
