--- a/config.toml
+++ b/config.toml
@@ -29,7 +29,7 @@ disqusShortname = "advtechpodcast"
 
 [params]
 site_theme = "blue"
-about_logo = "/img/home/alex/projects/podcast artefacts/logos/Advancetechmediaavataritunes.png"
+about_logo = "/Advancetechmediaavataritunes.png"
 copyright_notice = "Copyright 2017 [Advance Tech Media](https://www.advancetechmedia.org)"
 # itunes_subscribe = ""
 # android_subscribe = ""
@@ -45,7 +45,7 @@ media_prefix = ""
     itunes_summary = "The Advance Tech Podcast brings you advanced technology and open source news you won’t hear in the mainstream media. Hosted by Alexandra Moxin and Adam Dymitruk. We promote technical and industry expertise, give you unparalleled access to industry experts. We aim to give you the unbiased truth in advanced technology and show where its going. In our weekly format we’ll review notable tech and startup news, provide tutorials and interview a special guest who is defining the technology of tomorrow." # Limited to 4000 characters or less, plain text, no HTML
     itunes_owner_name = "Advance Tech Media"
     itunes_owner_email = "alexandra.moxin@advancetechmedia.org" #contains the e-mail address that will be used to contact the owner of the Podcast for communication specifically about their Podcast on iTunes. It will not be publicly displayed on iTunes.
-    itunes_image = "https://www.advancetechmedia.org/img/home/alex/projects/podcast artefacts/logos/Advancetechmediaavataritunes.png" #fqdn to the image art for your podcast
+    itunes_image = "https://www.advancetechmedia.org/Advancetechmediaavataritunes.png" #fqdn to the image art for your podcast
     itunes_top_category = "Technology"
     itunes_first_sub_category = "Tech News"
     itunes_second_sub_category = "Software How-To"
