--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,10 @@
-baseurl = "https://advancetechmedia.org/"
+baseurl = "https://www.advancetechmedia.org/"
 languageCode = "en-us"
-title = "Advance Tech Podcast"
+title = "HugoCast"
 theme = "castanet"
-googleAnalytics = "UA-98351650-1"
-disqusShortname = "advtechpodcast"
-#themesdir = "../.."
+googleAnalytics = "UA-100789009-1"
+disqusShortname = "arresteddevops"
+themesdir = "themes"
 
 
 [permalinks]
@@ -15,64 +15,114 @@ disqusShortname = "advtechpodcast"
 
 # The theme supports menus with up to one submenu per menu item
 # The menu name must be "Main"
-# SectionPagesMenu = "Main"
-# About section of menu
+# The menus are sorted based upon their identifier
 [[Menu.Main]]
     name = "About"
     identifier = "about"
     url = "about"
 
-# [[Menu.Main]]
-#    name = "Resources"
-#    identifier = "resources"
-#    url = "#!"
+[[Menu.Main]]
+    name = "Contact"
+    identifier = "contact"
+    url = "contact"
+
+[[Menu.Main]]
+    name = "Guests"
+    identifier = "guests"
+    url = "guest"
+
+[[Menu.Main]]
+    name = "Resources"
+    identifier = "resources"
+    url = "#!"
+
+[[Menu.Main]]
+    name = "Books"
+    identifier = "books"
+    url = "books"
+    parent = "resources"
+[[Menu.Main]]
+    name = "Podcasts"
+    identifier = "podcasts"
+    url = "books"
+    parent = "resources"
 
 [params]
 site_theme = "blue"
-about_logo = "/Advancetechmediaavataritunes.png"
-copyright_notice = "Copyright 2017 [Advance Tech Media](https://www.advancetechmedia.org)"
-itunes_subscribe = "https://itunes.apple.com/ca/podcast/advance-tech-podcast/id1278222771"
-android_subscribe = "http://www.subscribeonandroid.com/www.advancetechmedia.org/episode/index.xml"
-# google_play_subscribe = ""
-# mailchimp_subscribe = ""
+site_layout = "row"
+enable_jumbo = "true"
+# truncate = "100"
+# about_logo = "/img/hugocast.png"
+copyright_notice = "Copyright 2016 [Matt Stratton](https://www.mattstrattion.io)"
+itunes_subscribe = "http://itunes.apple.com/us/podcast/arrested-devops/id773888088?mt=2&uo=4&at=11lsCi"
+android_subscribe = "http://subscribeonandroid.com/feeds.podtrac.com/VGAulpN7MY1U"
+google_play_subscribe = "https://goo.gl/app/playmusic?ibi=com.google.PlayMusic&isi=691797987&ius=googleplaymusic&link=https://play.google.com/music/m/Ihj4yege3lfmp3vs5yoopgxijpi?t%3DArrested_DevOps"
+sticher_subscribe = "http://www.stitcher.com/podcast/arrested-devops-2/arrested-devops"
+soundcloud_subscribe = "http://feeds.soundcloud.com/users/soundcloud:users:203144248/sounds.rss"
+pocketcasts_subscribe = "http://pcasts.in/feed/feeds.soundcloud.com/users/soundcloud:users:203144248/sounds.rss"
+mailchimp_subscribe = "//arresteddevops.us3.list-manage.com/subscribe/post?u=5e4cbcac996bb9df25f970a89&amp;id=154fa76bcc"
 #rss_subscribe = "http://feed.com/myfeed" #only set this if you don't want to use the built-in feed
-description = "Welcome to the Advance Tech Podcast bringing you news you won’t hear in the mainstream media. Hosted by Alexandra Moxin and Adam Dymitruk. In our weekly format we’ll review notable tech news, provide tutorials and interview a special guest who is defining the technology of tomorrow. Sponsored by Adaptech Solutions, building software that defies convention. Get your startup off on the right foot for the future and avoid the dreaded MVP rewrite, get out of your legacy code trap, and get trained in modern software architecture practices. Visit [Adaptech Solutions](https://adaptechsolutions.net/) today to see why we're different."
-media_prefix = ""
+description = "The HugoCast is the best podcast you've ever seen. You will learn everything you ever needed to know about [podcasting](https://en.wikipedia.org/wiki/Podcast) from the most inspiring experts to ever show up on the whole internet."
+media_prefix = "https://media.blubrry.com/arresteddevops/content.blubrry.com/arresteddevops/"
   [params.feed]
-    feed_copyright = "Copyright 2017 Advance Tech Media" #do not use markdown in this field; it is used in the feed
-    itunes_subtitle = "Bringing you the latest in technology and open source news!" #no markdown or HTML
-    itunes_author = "Alexandra Moxin" #no markdown or HTML
-    itunes_summary = "The Advance Tech Podcast brings you advanced technology and open source news you won’t hear in the mainstream media. Hosted by Alexandra Moxin and Adam Dymitruk. We promote technical and industry expertise, give you unparalleled access to industry experts. We aim to give you the unbiased truth in advanced technology and show where its going. In our weekly format we’ll review notable tech and startup news, provide tutorials and interview a special guest who is defining the technology of tomorrow." # Limited to 4000 characters or less, plain text, no HTML
-    itunes_owner_name = "Advance Tech Media"
-    itunes_owner_email = "alexandra.moxin@advancetechmedia.org" #contains the e-mail address that will be used to contact the owner of the Podcast for communication specifically about their Podcast on iTunes. It will not be publicly displayed on iTunes.
-    itunes_image = "https://www.advancetechmedia.org/Advancetechmediaavataritunes.png" #fqdn to the image art for your podcast
+    feed_copyright = "Copyright 2016 Matt Stratton" #do not use markdown in this field; it is used in the feed
+    itunes_subtitle = "The best podcast ever" #no markdown or HTML
+    itunes_author = "Matt Stratton" #no markdown or HTML
+    itunes_summary = "The HugoCast is the best podcast you've ever seen. You will learn everything you ever needed to know about podcasting from the most inspiring experts to ever show up on the whole internet." # Limited to 4000 characters or less, plain text, no HTML
+    itunes_owner_name = "Matt Stratton"
+    itunes_owner_email = "matt.stratton@gmail.com" #contains the e-mail address that will be used to contact the owner of the Podcast for communication specifically about their Podcast on iTunes. It will not be publicly displayed on iTunes.
+    itunes_image = "https://www.arresteddevops.com/img/ado-podcast-logo.png" #fqdn to the image art for your podcast
     itunes_top_category = "Technology"
-    itunes_first_sub_category = "Tech News"
-    itunes_second_sub_category = "Software How-To"
-    itunes_third_sub_category = "Podcasting"
+    itunes_first_sub_category = "Software How-To"
+    itunes_second_sub_category = "Tech News"
 
   [params.social]
-    github = "AdvanceTechMedia"
-    twitter = "AdvTechPodcast"
-#   linkedin = "/company/18038505/"
-#   facebook = "advancetechmedia"
-#   instagram = "advance_tech_media"
+    github = "arresteddevops"
+    gitlab = "mattstratton"
+    facebook = "Arresteddevops"
+    facebook_admin = "500557137"  # This needs to be a page admin to get domain insights
+    twitter = "arresteddevops"
+    twitter_domain = "arresteddevops.com" # This domain shows in twitter cards as "View on `twitter_domain`"
+    googleplus = "ArrestedDevOps"
+    pinterest = "nozzleio"
+    instagram = "nozzleio"
+    youtube = "arresteddevops"
+    linkedin = "mattstratton"
 
   [params.authors]
-    [params.authors.Alexandra]
-      name	= "Alexandra Moxin"
-      thumbnail = ""
-      bio = "Alexandra is dedicated to advancing the responsible application of cutting edge technology such as blockchain, Bitcoin, Ethereum, other tokens and cryptocurrencies, AI, VR/AR, distributed data, and the platforms that support these. She is Co-founder and Host of the Advance Tech Podcast where she interviews innovative and forward thinking experts in development, start-up and business communities and others who are defining the technology of tomorrow. As Director of Business Development for Adaptech Solutions she meets with management teams and decision makers and creates new opportunities by promoting and fostering community development and industry partnerships. Alexandra has over a decade of experience managing software projects and brings an understanding of how event based system implementations impact organisations. She is a student of the patterns in DDD/CQRS/ES and how they apply to Conway’s Law."
-      [params.authors.Alexandra.social]
-        github = "lexi933"
-        twitter = "Alexandra933"
-        linkedin = "alexandra-moxin"
-    [params.authors.Adam]
-			name = "Adam Dymitruk"
-			thumbnail = ""
-			bio = "CEO and Founder of Adaptech Solutions, and co-host of the Advance Tech Podcast, Adam is a passionate technologist and has worked in the field for a few decades in numerous roles. He has contributed to the scaling approaches in CQRS and Event Sourcing by introducing PAXOS to the consistency strategy in 2008. In 2011-2012, he helped Microsoft's Patterns and Practices team introduce modern open-source tooling to the CQRS Journey book project. He has inspired organisations to excel in approaches to software in modern workflows, inspired a culture of learning and instilled a modern approach to software architecture. A subscriber to the idea that Conway’s Law is something that can be taken advantage of instead of something organisations fall victim to, he is able to put the right teams together, using the right future-proof technologies to get software written with the highest quality at lower costs and timelines."
-				[params.authors.Adam.social]
-					github = "adymitruk"
-                    twitter = "adymitruk"
-                    linkedin = "eventsourcing"
+    [params.authors.Matt]
+      name	= "Matt Stratton"
+      thumbnail = "img/host/matt.png"
+      bio = "Matt Stratton is a solutions architect at Chef, where he demonstrates how Chef’s automation platform provides speed and flexibility to clients’ infrastructure. He is devoted to concepts like Continuous Delivery and Infrastructure as Code, and his license plate actually says “DevOps”. He lives in Chicago and has an unhealthy obsession with Doctor Who, Firefly, and Game of Thrones. And whiskey."
+      [params.authors.Matt.social]
+        github = "mattstratton"
+        facebook = "matt.stratton"
+        twitter = "mattstratton"
+        linkedin = "mattstratton"
+        homepage = "https://www.mattstratton.io"
+        pinterest = "mattstratton"
+        instagram = "instagram"
+        youtube = "mattstratton"
+    [params.authors.Trevor]
+			name = "Trevor Hess"
+			thumbnail = "https://www.arresteddevops.com/img/trevor.png"
+			bio = ""
+				[params.authors.Trevor.social]
+					twitter = "trevorghess"
+    [params.authors.Bridget]
+      name = "Bridget Kromhout"
+      thumbnail = "https://www.arresteddevops.com/img/Bridget.png"
+      bio = ""
+      [params.authors.Bridget.social]
+        twitter = "bridgetkromhout"
 
+    [params.links]
+      [params.links.ado]
+        name = "Arrested DevOps"
+        url = "https://www.arresteddevops.com"
+      [params.links.ffs]
+        name = "Food Fight Show"
+        url = "https://foodfightshow.org"
+      [params.links.sdt]
+        name = "Software Defined Talk"
+        url = "https://cote.io/podcasts/sdt/"
