--- a/config.toml
+++ b/config.toml
@@ -1,9 +1,9 @@
 baseurl = "https://www.advancetechmedia.org/"
 languageCode = "en-us"
-title = "HugoCast"
+title = "Advance Tech Podcast"
 theme = "castanet"
-googleAnalytics = "UA-100789009-1"
-disqusShortname = "arresteddevops"
+googleAnalytics = "UA-98351650-1"
+disqusShortname = "advtechpodcast"
 themesdir = "themes"
 
 
@@ -53,28 +53,29 @@ site_layout = "row"
 enable_jumbo = "true"
 # truncate = "100"
 # about_logo = "/img/hugocast.png"
-copyright_notice = "Copyright 2016 [Matt Stratton](https://www.mattstrattion.io)"
-itunes_subscribe = "http://itunes.apple.com/us/podcast/arrested-devops/id773888088?mt=2&uo=4&at=11lsCi"
-android_subscribe = "http://subscribeonandroid.com/feeds.podtrac.com/VGAulpN7MY1U"
+copyright_notice = "Copyright 2017 [Advance Tech Media](https://www.advancetechmedia.org)"
+itunes_subscribe = "https://itunes.apple.com/ca/podcast/advance-tech-podcast/id1278222771"
+android_subscribe = "http://www.subscribeonandroid.com/www.advancetechmedia.org/episode/index.xml"
 google_play_subscribe = "https://goo.gl/app/playmusic?ibi=com.google.PlayMusic&isi=691797987&ius=googleplaymusic&link=https://play.google.com/music/m/Ihj4yege3lfmp3vs5yoopgxijpi?t%3DArrested_DevOps"
 sticher_subscribe = "http://www.stitcher.com/podcast/arrested-devops-2/arrested-devops"
 soundcloud_subscribe = "http://feeds.soundcloud.com/users/soundcloud:users:203144248/sounds.rss"
 pocketcasts_subscribe = "http://pcasts.in/feed/feeds.soundcloud.com/users/soundcloud:users:203144248/sounds.rss"
 mailchimp_subscribe = "//arresteddevops.us3.list-manage.com/subscribe/post?u=5e4cbcac996bb9df25f970a89&amp;id=154fa76bcc"
 #rss_subscribe = "http://feed.com/myfeed" #only set this if you don't want to use the built-in feed
-description = "The HugoCast is the best podcast you've ever seen. You will learn everything you ever needed to know about [podcasting](https://en.wikipedia.org/wiki/Podcast) from the most inspiring experts to ever show up on the whole internet."
+description = "Welcome to the Advance Tech Podcast bringing you news you won’t hear in the mainstream media. Hosted by Alexandra Moxin and Adam Dymitruk. In our weekly format we’ll review notable tech news, provide tutorials and interview a special guest who is defining the technology of tomorrow. Sponsored by Adaptech Solutions, building software that defies convention. Get your startup off on the right foot for the future and avoid the dreaded MVP rewrite, get out of your legacy code trap, and get trained in modern software architecture practices. Visit [Adaptech Solutions](https://adaptechsolutions.net/) today to see why we're different."
 media_prefix = "https://media.blubrry.com/arresteddevops/content.blubrry.com/arresteddevops/"
   [params.feed]
-    feed_copyright = "Copyright 2016 Matt Stratton" #do not use markdown in this field; it is used in the feed
-    itunes_subtitle = "The best podcast ever" #no markdown or HTML
-    itunes_author = "Matt Stratton" #no markdown or HTML
-    itunes_summary = "The HugoCast is the best podcast you've ever seen. You will learn everything you ever needed to know about podcasting from the most inspiring experts to ever show up on the whole internet." # Limited to 4000 characters or less, plain text, no HTML
-    itunes_owner_name = "Matt Stratton"
-    itunes_owner_email = "matt.stratton@gmail.com" #contains the e-mail address that will be used to contact the owner of the Podcast for communication specifically about their Podcast on iTunes. It will not be publicly displayed on iTunes.
+    feed_copyright = "Copyright 2017 Advance Tech Media" #do not use markdown in this field; it is used in the feed
+    itunes_subtitle = "Bringing you the latest in technology and open source news!" #no markdown or HTML
+    itunes_author = "Alexandra Moxin" #no markdown or HTML
+    itunes_summary = "The Advance Tech Podcast brings you advanced technology and open source news you won’t hear in the mainstream media. Hosted by Alexandra Moxin and Adam Dymitruk. We aim to give you the unbiased truth in advanced technology and interview a special guest who is defining the technology of tomorrow." # Limited to 4000 characters or less, plain text, no HTML
+    itunes_owner_name = "Advance Tech Media"
+    itunes_owner_email = "alexandra.moxin@advancetechmedia.org" #contains the e-mail address that will be used to contact the owner of the Podcast for communication specifically about their Podcast on iTunes. It will not be publicly displayed on iTunes.
     itunes_image = "https://www.arresteddevops.com/img/ado-podcast-logo.png" #fqdn to the image art for your podcast
     itunes_top_category = "Technology"
-    itunes_first_sub_category = "Software How-To"
-    itunes_second_sub_category = "Tech News"
+    itunes_first_sub_category = "Tech News"
+    itunes_second_sub_category = "Software How-To"
+    itunes_third_sub_category = "Podcasting"
 
   [params.social]
     github = "arresteddevops"
