--- a/config.toml
+++ b/config.toml
@@ -92,8 +92,8 @@ media_prefix = "https://media.blubrry.com/arresteddevops/content.blubrry.com/arr
 
   [params.authors]
     [params.authors.Matt]
-      name	= "Matt Stratton"
-      thumbnail = "img/host/matt.png"
+      name	= "Adam Dymitruk"
+      thumbnail = "img/host/adam-2016-small-square.png"
       bio = "Matt Stratton is a solutions architect at Chef, where he demonstrates how Chef’s automation platform provides speed and flexibility to clients’ infrastructure. He is devoted to concepts like Continuous Delivery and Infrastructure as Code, and his license plate actually says “DevOps”. He lives in Chicago and has an unhealthy obsession with Doctor Who, Firefly, and Game of Thrones. And whiskey."
       [params.authors.Matt.social]
         github = "mattstratton"
