--- a/config.toml
+++ b/config.toml
@@ -94,12 +94,12 @@ media_prefix = "https://media.blubrry.com/arresteddevops/content.blubrry.com/arr
     [params.authors.Matt]
       name	= "Adam Dymitruk"
       thumbnail = "img/host/adam-2016-small-square.png"
-      bio = "Matt Stratton is a solutions architect at Chef, where he demonstrates how Chef’s automation platform provides speed and flexibility to clients’ infrastructure. He is devoted to concepts like Continuous Delivery and Infrastructure as Code, and his license plate actually says “DevOps”. He lives in Chicago and has an unhealthy obsession with Doctor Who, Firefly, and Game of Thrones. And whiskey."
+      bio = "CEO and Founder of Adaptech Solutions, and co-host of the Advance Tech Podcast, Adam is a passionate technologist and has worked in the field for a few decades in numerous roles. He has contributed to the scaling approaches in CQRS and Event Sourcing by introducing PAXOS to the consistency strategy in 2008. In 2011-2012, he helped Microsoft's Patterns and Practices team introduce modern open-source tooling to the CQRS Journey book project. He has inspired organisations to excel in approaches to software in modern workflows, inspired a culture of learning and instilled a modern approach to software architecture. A subscriber to the idea that Conway’s Law is something that can be taken advantage of instead of something organisations fall victim to, he is able to put the right teams together, using the right future-proof technologies to get software written with the highest quality at lower costs and timelines."
       [params.authors.Matt.social]
-        github = "mattstratton"
+        github = "adymitruk"
         facebook = "matt.stratton"
-        twitter = "mattstratton"
-        linkedin = "mattstratton"
+        twitter = "adymitruk"
+        linkedin = "eventsourcing"
         homepage = "https://www.mattstratton.io"
         pinterest = "mattstratton"
         instagram = "instagram"
@@ -111,11 +111,11 @@ media_prefix = "https://media.blubrry.com/arresteddevops/content.blubrry.com/arr
 				[params.authors.Trevor.social]
 					twitter = "trevorghess"
     [params.authors.Bridget]
-      name = "Bridget Kromhout"
-      thumbnail = "https://www.arresteddevops.com/img/Bridget.png"
-      bio = ""
+      name = "Alexandra Moxin"
+      thumbnail = "img/host.LinkedIn.png"
+      bio = "Alexandra is dedicated to advancing the responsible application of cutting edge technology such as blockchain, Bitcoin, Ethereum, other tokens and cryptocurrencies, AI, VR/AR, distributed data, and the platforms that support these. She is Co-founder and Host of the Advance Tech Podcast where she interviews innovative and forward thinking experts in development, start-up and business communities and others who are defining the technology of tomorrow. As Director of Business Development for Adaptech Solutions she meets with management teams and decision makers and creates new opportunities by promoting and fostering community development and industry partnerships. Alexandra has over a decade of experience managing software projects and brings an understanding of how event based system implementations impact organisations. She is a student of the patterns in DDD/CQRS/ES and how they apply to Conway’s Law."
       [params.authors.Bridget.social]
-        twitter = "bridgetkromhout"
+        twitter = "Alexandra933"
 
     [params.links]
       [params.links.ado]
