--- a/config.toml
+++ b/config.toml
@@ -63,7 +63,7 @@ pocketcasts_subscribe = "http://pcasts.in/feed/feeds.soundcloud.com/users/soundc
 mailchimp_subscribe = "//arresteddevops.us3.list-manage.com/subscribe/post?u=5e4cbcac996bb9df25f970a89&amp;id=154fa76bcc"
 #rss_subscribe = "http://feed.com/myfeed" #only set this if you don't want to use the built-in feed
 description = "Welcome to the Advance Tech Podcast bringing you news you won’t hear in the mainstream media. Hosted by Alexandra Moxin and Adam Dymitruk. In our weekly format we’ll review notable tech news, provide tutorials and interview a special guest who is defining the technology of tomorrow. Sponsored by Adaptech Solutions, building software that defies convention. Get your startup off on the right foot for the future and avoid the dreaded MVP rewrite, get out of your legacy code trap, and get trained in modern software architecture practices. Visit [Adaptech Solutions](https://adaptechsolutions.net/) today to see why we're different."
-media_prefix = "https://media.blubrry.com/arresteddevops/content.blubrry.com/arresteddevops/"
+media_prefix = "https://advancetechmedia.org/"
   [params.feed]
     feed_copyright = "Copyright 2017 Advance Tech Media" #do not use markdown in this field; it is used in the feed
     itunes_subtitle = "Bringing you the latest in technology and open source news!" #no markdown or HTML
@@ -78,41 +78,35 @@ media_prefix = "https://media.blubrry.com/arresteddevops/content.blubrry.com/arr
     itunes_third_sub_category = "Podcasting"
 
   [params.social]
-    github = "arresteddevops"
-    gitlab = "mattstratton"
-    facebook = "Arresteddevops"
+    github = "advancetechmedia"
+    #gitlab = "mattstratton"
+    facebook = "advancetechmedia"
     facebook_admin = "500557137"  # This needs to be a page admin to get domain insights
-    twitter = "arresteddevops"
+    twitter = "advancetechmedia"
     twitter_domain = "arresteddevops.com" # This domain shows in twitter cards as "View on `twitter_domain`"
     googleplus = "ArrestedDevOps"
     pinterest = "nozzleio"
     instagram = "nozzleio"
     youtube = "arresteddevops"
-    linkedin = "mattstratton"
+    linkedin = "advancetechmedia"
 
   [params.authors]
-    [params.authors.Matt]
+    [params.authors.Adam]
       name	= "Adam Dymitruk"
       thumbnail = "img/host/adam-2016-small-square.png"
       bio = "CEO and Founder of Adaptech Solutions, and co-host of the Advance Tech Podcast, Adam is a passionate technologist and has worked in the field for a few decades in numerous roles. He has contributed to the scaling approaches in CQRS and Event Sourcing by introducing PAXOS to the consistency strategy in 2008. In 2011-2012, he helped Microsoft's Patterns and Practices team introduce modern open-source tooling to the CQRS Journey book project. He has inspired organisations to excel in approaches to software in modern workflows, inspired a culture of learning and instilled a modern approach to software architecture. A subscriber to the idea that Conway’s Law is something that can be taken advantage of instead of something organisations fall victim to, he is able to put the right teams together, using the right future-proof technologies to get software written with the highest quality at lower costs and timelines."
-      [params.authors.Matt.social]
+      [params.authors.Adam.social]
         github = "adymitruk"
-        facebook = "matt.stratton"
+        facebook = "adymitruk"
         twitter = "adymitruk"
         linkedin = "eventsourcing"
-        homepage = "https://www.mattstratton.io"
-        pinterest = "mattstratton"
-        instagram = "instagram"
+        homepage = "https://www.adaptechsolutions.net/about"
+        #pinterest = "mattstratton"
+        #instagram = "instagram"
         youtube = "mattstratton"
-    [params.authors.Trevor]
-			name = "Trevor Hess"
-			thumbnail = "https://www.arresteddevops.com/img/trevor.png"
-			bio = ""
-				[params.authors.Trevor.social]
-					twitter = "trevorghess"
     [params.authors.Bridget]
       name = "Alexandra Moxin"
-      thumbnail = "img/host.LinkedIn.png"
+      thumbnail = "img/host/Alex.jpg"
       bio = "Alexandra is dedicated to advancing the responsible application of cutting edge technology such as blockchain, Bitcoin, Ethereum, other tokens and cryptocurrencies, AI, VR/AR, distributed data, and the platforms that support these. She is Co-founder and Host of the Advance Tech Podcast where she interviews innovative and forward thinking experts in development, start-up and business communities and others who are defining the technology of tomorrow. As Director of Business Development for Adaptech Solutions she meets with management teams and decision makers and creates new opportunities by promoting and fostering community development and industry partnerships. Alexandra has over a decade of experience managing software projects and brings an understanding of how event based system implementations impact organisations. She is a student of the patterns in DDD/CQRS/ES and how they apply to Conway’s Law."
       [params.authors.Bridget.social]
         twitter = "Alexandra933"
