--- a/config.toml
+++ b/config.toml
@@ -60,7 +60,7 @@ itunes_subscribe = "https://itunes.apple.com/ca/podcast/advance-tech-podcast/id1
 android_subscribe = "http://www.subscribeonandroid.com/advancetechmedia.org/episode/index.xml"
 #google_play_subscribe = "https://goo.gl/app/playmusic?ibi=com.google.PlayMusic&isi=691797987&ius=googleplaymusic&link=https://play.google.com/music/m/Ihj4yege3lfmp3vs5yoopgxijpi?t%3DArrested_DevOps"
 #sticher_subscribe = "http://www.stitcher.com/podcast/arrested-devops-2/arrested-devops"
-#soundcloud_subscribe = "http://feeds.soundcloud.com/users/soundcloud:users:203144248/sounds.rss"
+soundcloud_subscribe = "https://soundcloud.com/user-716837148"
 #pocketcasts_subscribe = "http://pcasts.in/feed/feeds.soundcloud.com/users/soundcloud:users:203144248/sounds.rss"
 #mailchimp_subscribe = "//arresteddevops.us3.list-manage.com/subscribe/post?u=5e4cbcac996bb9df25f970a89&amp;id=154fa76bcc"
 #rss_subscribe = "http://feed.com/myfeed" #only set this if you don't want to use the built-in feed
