fixed the base url

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://www.advancetechmedia.org/"
+baseurl = "https://advancetechmedia.org/"
 languageCode = "en-us"
 title = "Advance Tech Podcast"
 theme = "castanet"
