--- a/config.toml
+++ b/config.toml
@@ -58,7 +58,7 @@ about_logo = "/img/Advancetechmedia avatar.png"
 copyright_notice = "Copyright 2017 [Advance Tech Media](https://www.advancetechmedia.org)"
 itunes_subscribe = "https://itunes.apple.com/ca/podcast/advance-tech-podcast/id1278222771"
 android_subscribe = "http://www.subscribeonandroid.com/advancetechmedia.org/episode/index.xml"
-#google_play_subscribe = "https://goo.gl/app/playmusic?ibi=com.google.PlayMusic&isi=691797987&ius=googleplaymusic&link=https://play.google.com/music/m/Ihj4yege3lfmp3vs5yoopgxijpi?t%3DArrested_DevOps"
+google_play_subscribe = "https://play.google.com/music/listen?u=0#/ps/Ixpkgrijhidwwxqyz4qwfh4azhm"
 #sticher_subscribe = "http://www.stitcher.com/podcast/arrested-devops-2/arrested-devops"
 soundcloud_subscribe = "https://soundcloud.com/user-716837148"
 #pocketcasts_subscribe = "http://pcasts.in/feed/feeds.soundcloud.com/users/soundcloud:users:203144248/sounds.rss"
@@ -90,7 +90,7 @@ media_prefix = "https://advancetechmedia.org/"
     #googleplus = "ArrestedDevOps"
     #pinterest = "nozzleio"
     instagram = "advance_tech_media"
-    #youtube = "arresteddevops"
+    youtube = "channel/UCNnsKDIRB-HjNUeuvj5IW9w"
 
 
   [params.authors]
