add linked in link

--- a/config.toml
+++ b/config.toml
@@ -83,7 +83,7 @@ media_prefix = "https://advancetechmedia.org/"
     github = "advancetechmedia"
     #gitlab = "mattstratton"
     twitter = "AdvTechPodcast"
-    #linkedin = "/company/advance-tech-media/"
+    linkedin = "/company/advance-tech-media/"
     #facebook_admin = "500557137"  # This needs to be a page admin to get domain insights
     facebook = "advancetechmedia"
     #twitter_domain = "arresteddevops.com" # This domain shows in twitter cards as "View on `twitter_domain`"
