fixed rss feed from en-us to en-US

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseurl = "https://advancetechmedia.org/"
-languageCode = "en-us"
+languageCode = "en-US"
 title = "Advance Tech Podcast"
 theme = "castanet"
 googleAnalytics = "UA-98351650-1"
