--- a/config.toml
+++ b/config.toml
@@ -110,7 +110,7 @@ media_prefix = "http://advancetechmedia.org/"
     [params.authors.Alex]
       name = "Alexandra Moxin"
       thumbnail = "img/host/Alex.jpg"
-      bio = "Global Connector, Leader, Founder of Advance Tech Media and Host of the Advance Tech Podcast. Alexandra is dedicated to advancing research in and the responsible application of bleeding edge technology such as AI, neural and distributed networks, ML and deep learning, blockchain, cryptocurrency, VR/AR and the event based platforms that support these. Alexandra has over a decade of experience developing business and community and brings an understanding of how event based system implementations impact organisations. She is a strong proponent of open source communities."
+      bio = "Founder of Advance Tech Media and Host of the Advance Tech Podcast, Alexandra is dedicated to advancing the research and responsible application of bleeding edge technology and in just one year has grown a global audience base to over 250,000 listens. Alexandra is CEO and CoFounder of a digital services company with an early stage social/blockchain project and is a featured Speaker and Educator with the BC Blockchain Forum. She is a strong proponent of open source communities."
       [params.authors.Alex.social]
         twitter = "Alexandra933"
         linkedin = "alexandra-moxin"
