adding episode 20 skeleton
3rd attempt to commit episode 20 and guest pages

episode 20 and guest pages

--- a/config.toml
+++ b/config.toml
@@ -47,11 +47,6 @@ themesdir = "themes"
 #    identifier = "syndicatedpodcasts"
 #    url = "syndicate"
 
-#[[Menu.Main]]
-#    name = "Blog"
-#    identifier = "blog"
-#    url = "blog"
-
 [params]
 site_theme = "blue"
 site_layout = "row"
@@ -68,11 +63,11 @@ soundcloud_subscribe = "https://soundcloud.com/user-716837148"
 #pocketcasts_subscribe = "http://pcasts.in/feed/feeds.soundcloud.com/users/soundcloud:users:716837148/sounds.rss"
 #mailchimp_subscribe = "//arresteddevops.us3.list-manage.com/subscribe/post?u=5e4cbcac996bb9df25f970a89&amp;id=154fa76bcc"
 #rss_subscribe = "http://feed.com/myfeed" #only set this if you don't want to use the built-in feed
-description = "<p>Welcome to the Advance Tech Podcast providing a spotlight for innovative and disruptive initiatives and interviewing guests building the technology of tomorrow. Hosted by Alexandra Moxin and Adam Dymitruk. </p><p>Advance Tech Media is dedicated to advancing research and supporting the responsible application of bleeding edge technology and practices that foster quality, equality and sustainability."
+description = "<p>The Advance Tech Podcast provides a spotlight for innovative and disruptive initiatives and features guests building the technology of tomorrow. Hosted by Alexandra Moxin and Adam Dymitruk. </p><p>Advance Tech Media is dedicated to advancing research and supporting the responsible application of bleeding edge technology and practices that foster quality, equality and sustainability.</p><p>Subscribe below and check out our brand new [commercial site](https://advancetechmedia.com/)"
 media_prefix = "http://advancetechmedia.org/"
   [params.feed]
     feed_copyright = "Copyright 2017 - 2018 Advance Tech Media" #do not use markdown in this field; it is used in the feed
-    itunes_subtitle = "Bringing you the latest in bleeding edge technology, sustainability, free and open source projects. We provide a spotlight for innovative and disruptive initiatives and interview guests defining the technology of tomorrow." #no markdown or HTML
+    itunes_subtitle = "Featuring people who are passionate about making the world a better place and pushing the boundaries of innovation." #no markdown or HTML
     itunes_author = "Alexandra Moxin" #no markdown or HTML
     itunes_summary = "The Advance Tech Podcast brings you the latest in bleeding edge technology, and insight into free and open source projects you won’t hear in the mainstream media. Hosted by Alexandra Moxin and Adam Dymitruk. We aim to give you the unbiased truth and interview guests who are defining the technology of tomorrow." # Limited to 4000 characters or less, plain text, no HTML
     itunes_owner_name = "Advance Tech Media"
